<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <EditText
            android:id="@+id/type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="@string/wpisz_imie"
            android:inputType="textPersonName" />
    <EditText
            android:id="@+id/type_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/type_name"
            android:layout_alignRight="@+id/type_name"
            android:layout_below="@+id/type_name"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/wpisz_numer"
            android:inputType="phone" />


    <Button
            android:id="@+id/add_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_number"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="43dp"
            android:text="@string/zapisz"
    />
    <TextView
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

</RelativeLayout>