<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <TextView
            android:id="@+id/wpisz_imie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:text="@string/tekst_waga"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textAppearance=""

             />
    <EditText
            android:id="@+id/wpisz_wage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_below="@+id/wpisz_imie"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/wpisz_wage"
            android:inputType="number" />


    <Button
            android:id="@+id/dodaj_wage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wpisz_wage"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="43dp"
            android:text="@string/zapisz"
    />
    <TextView
            android:id="@+id/wyswietl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dodaj_numer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


</RelativeLayout>